# gwa-cli

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/: gwa_form_00.rs  gwa_selector_00.rs  main_tester.py  main_tester.rs
src/: cli.rs  config.rs  generator.rs  interactive.rs  lib.rs  main.rs  validators.rs
src/engine/: error.rs  mod.rs  plan.rs  source.rs  transform.rs
src/gwa/: __init__.py  cli.py  config.py  tui.py
src/gwa/cli/: __init__.py  callbacks.py  commands.py  options.py
