[package]
name = "gwa"
version = "0.1.0"
edition = "2024"
description = "A command-line scaffolder for General Web App (GWA) projects."
authors = ["Yrrrrrf <fer.rezac@outlook.com>"] # It's good practice to include an email
repository = "https://github.com/Yrrrrrf/gwa-create" # Link to the specific CLI repo
documentation = "https://github.com/Yrrrrrf/gwa-create/blob/main/README.md" # Link to your new README
license = "MIT"
keywords = ["cli", "scaffolding", "template", "web", "fullstack"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "examples/", # Exclude examples from a published package
]


# Release Profile for optimized, smaller binaries
# These settings make the final executable faster and smaller,
# perfect for a CLI tool distribution.
[profile.release]
opt-level = 3       # Enable full optimizations.
lto = true          # Enable Link-Time Optimization for a smaller/faster binary.
codegen-units = 1   # Compile everything in one unit for max optimization (slower compile time).
strip = true        # Strip debug symbols from the final binary to reduce size.


[dependencies]
# The core templating engine that powers the file generation.
cargo-generate = "0.23.3"

# For parsing command-line arguments and building the CLI interface.
clap = { version = "4.5.40", features = ["derive"] }

# For creating beautiful, interactive user prompts.
inquire = "0.7.5"

# # Dependencies only used for development, like benchmarking or integration tests.
# [dev-dependencies]
# # criterion = "0.6.0" # Example: for adding benchmarks later